--- a/force-app/main/default/aura/CreateDeliveryNoteLightngComp/CreateDeliveryNoteLightngComp.cmp
+++ b/force-app/main/default/aura/CreateDeliveryNoteLightngComp/CreateDeliveryNoteLightngComp.cmp
@@ -3,6 +3,7 @@
     <aura:handler name="init" value="{!this}" action="{!c.doinit}" />
     <aura:attribute name="wrapMains" type="object" />
     <aura:attribute name="disableCheckBox" type="Boolean" />
+    <aura:attribute name="isdeliverydate" type="boolean" default="false" />
     
     <aura:html tag="style">
         .cuf-content {
@@ -80,7 +81,9 @@
                         <div class="slds-truncate slds-cell-wrap" title="Net Amount">Net Amount</div>
                     </th>
                     <th class="" scope="col" style="width:10% !important; text-align:center;" >
-                        <div class="slds-truncate slds-cell-wrap" title="Delivery Date">Delivery Date</div>
+                        <div class="slds-truncate slds-cell-wrap" title="Delivery Date">Delivery Date
+                        <lightning:input type="checkbox" label="Same Date" name="input1" checked="{!v.isdeliverydate}" onchange="{!c.deliverydateactionCheckbox}"/>
+                        </div>
                     </th>
                     <th class="" scope="col" style="width:15% !important; text-align:center;">
                         <div class="slds-truncate slds-cell-wrap" title="Remark">Remark</div>
@@ -121,7 +124,7 @@
                             <lightning:input id="quantity"  variant="label-hidden" name="{!index}" type="number" step="0.01" value="{!cusProd.totalamount}" disabled="true" />
                         </td>
                         <td class="dataCell" title="{!cusProd.hsncode}">
-                            <lightning:input  type="Text" variant="label-hidden"  value="{!cusProd.hsncode}" disabled="true"/>
+                            <lightning:input  type="Text" variant="label-hidden"  value="{!cusProd.hsncode}" disabled="false"/>
                         </td>
                         <!-- Check CGST and SGST  -->
                         <aura:if isTrue="{!!v.wrapMains.igstvalue}">
