--- a/force-app/main/default/aura/PI_Email_Send/PI_Email_Send.cmp
+++ b/force-app/main/default/aura/PI_Email_Send/PI_Email_Send.cmp
@@ -12,7 +12,7 @@
     <div >
         <lightning:input value="{!v.wrappr.objquote.Contact_Person__r.Email}" aura:id="EmailAddress" type="text" label="To Email Address:" />
         <lightning:input aura:id="CC" type="text"  label="CC Email Address:" />
-        <lightning:input aura:id="Subject" required="true" type="text" label="Subject" />
+        <lightning:input aura:id="Subject" required="true" type="text" label="Subject" value="{!v.wrappr.Subject}"/>
         <!-- <lightning:inputRichText  aura:id="bodyid"  label="Body" value="{!v.wrappr.emailbody}" placeholder="Type something interesting"/>
       --> <lightning:textarea aura:id="bodyid"    label="Body" value="{!v.wrappr.emailbody}" />
         
