--- a/force-app/main/default/aura/Salesorderlineitemcomponent/Salesorderlineitemcomponent.cmp
+++ b/force-app/main/default/aura/Salesorderlineitemcomponent/Salesorderlineitemcomponent.cmp
@@ -7,7 +7,7 @@
     <aura:handler event="aura:doneWaiting" action="{!c.hideSpinner}"/>
     -->
     <aura:handler name="init" value="{!this}" action="{!c.doinit}" />
-    
+    <aura:attribute name="issave" type="boolean" default="false"/>
     <aura:attribute name="wrapMain" type="object" />
     <aura:attribute name="isListOpen12" type="boolean" default = "false" />
     <aura:attribute name="MainProd" type="string" default = "" />
@@ -159,7 +159,7 @@
                                             <tbody>
                                                 <aura:iteration items="{!v.wrapMain.lstWrapp}" var="cusProd" indexVar="index">
                                                     <tr width="100%" id="{!index}"> 
-                                                        <td class="dataCell" style="width: 8rem;" ><lightning:input type="checkbox" value="{!cusProd.isSelected}" checked="{!cusProd.isSelected}" name="{!index}" onchange="{!c.checkJs}"/></td>
+                                                        <td class="dataCell" style="width: 8rem;" ><lightning:input type="checkbox" value="{!cusProd.isSelected}" checked="{!cusProd.isSelected}" name="{!cusProd.objProd.Id}" onchange="{!c.checkJs}"/></td>
                                                         <td class="dataCell" style="width: 8rem;"><a href="{! '/' + cusProd.objProd.Id}"> {!cusProd.objProd.Name}</a></td>
                                                         <td class="dataCell" style="width: 9rem;">{!cusProd.oldPartName}</td>
                                                         <td class="dataCell" style="width: 9rem;">{!cusProd.objProd.Part_Name__c}</td>
@@ -201,7 +201,7 @@
                                                         <div class="slds-truncate slds-cell-fixed slds-cell-wrap" title="Part Serial #" >Part Serial #</div>
                                                     </th>
                                                     <th class=" slds-cell-shrink slds-text-align_center padding" scope="col"  >
-                                                        <div class="slds-truncate slds-cell-fixed slds-cell-wrap" title="Pending delivery qt" >Pending <br/>DSelivery Qty</div>
+                                                        <div class="slds-truncate slds-cell-fixed slds-cell-wrap" title="Pending delivery qt" >Pending <br/>Delivery Qty</div>
                                                     </th>
                                                     
                                                     <th class=" slds-cell-shrink slds-text-align_center padding" scope="col"  >
@@ -274,9 +274,9 @@
                                                     <tr class="slds-line-height_reset slds-hint-parent" id="{!index}">
                                                         <td class="" ><div class="slds-truncate" title="">
                                                             <aura:if isTrue="{!cusProdTwo.isLineItem}">
-                                                                <lightning:buttonIcon value="{!index}" alternativeText="Delete" variant="border-filled"  iconName="utility:delete"  onclick="{!c.Deletelineitem}" />
+                                                                <lightning:buttonIcon value="{!cusProdTwo.objProdchild.Product_Part__c}" alternativeText="Delete" variant="border-filled"  iconName="utility:delete"  onclick="{!c.Deletelineitem}" />
                                                                 <aura:set attribute="else">
-                                                                    <lightning:buttonIcon value="{!index}" alternativeText="Delete" variant="border-filled"  iconName="utility:delete"  onclick="{!c.removeselectedpart}" />                                                                  		
+                                                                    <lightning:buttonIcon value="{!cusProdTwo.objProdchild.Product_Part__c}" alternativeText="Delete" variant="border-filled"  iconName="utility:delete"  onclick="{!c.removeselectedpart}" />                                                                  		
                                                                 </aura:set>
                                                             </aura:if>
                                                             </div></td>
